--- a/src/SoftPosit/SoftPosit.csproj
+++ b/src/SoftPosit/SoftPosit.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>System.Numerics</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PackageId>SoftPosit.Net</PackageId>
+    <VersionPrefix>0.1.0</VersionPrefix>
+    <Authors>Francois Retief</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,5 +21,9 @@
     <DebugSymbols>true</DebugSymbols>
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
 
 </Project>
