--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 3.1.103
 
     - name: Install dependencies
       run: dotnet restore
@@ -37,7 +37,13 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 3.1.103
+        source-url: https://nuget.pkg.github.com/fgretief/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
-    - name: Generate NuGet package
-      run: dotnet pack --configuration Release
+    - name: Create the NuGet package
+      run: dotnet pack --configuration Release src/SoftPosit
+
+    - name: Publish NuGet package to GitHub Packages
+      run: dotnet nuget push src/SoftPosit/bin/Release/*.nupkg
