--- a/src/SoftPosit/SoftPosit.csproj
+++ b/src/SoftPosit/SoftPosit.csproj
@@ -5,13 +5,15 @@
     <RootNamespace>System.Numerics</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <Deterministic>true</Deterministic>
     <PackageId>SoftPosit.Net</PackageId>
     <VersionPrefix>0.1.1</VersionPrefix>
-    <VersionSuffix>alpha1</VersionSuffix>
+    <VersionSuffix>alpha2</VersionSuffix>
     <Authors>Francois Retief</Authors>
-    <!--<RepositoryUrl>https://github.com/fgretief/SoftPosit.Net.git</RepositoryUrl>-->
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
