--- a/src/SoftPosit/SoftPosit.csproj
+++ b/src/SoftPosit/SoftPosit.csproj
@@ -6,13 +6,14 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     <Deterministic>true</Deterministic>
     <PackageId>SoftPosit.Net</PackageId>
     <VersionPrefix>0.1.1</VersionPrefix>
-    <VersionSuffix>alpha2</VersionSuffix>
+    <VersionSuffix>alpha3</VersionSuffix>
     <Authors>Francois Retief</Authors>
   </PropertyGroup>
 
