Change deploy to run on Windows machine

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
 
@@ -46,4 +46,4 @@ jobs:
       run: dotnet pack --configuration Release src/SoftPosit -p:ContinuousIntegrationBuild=true
 
     - name: Publish NuGet package to GitHub Packages
-      run: dotnet nuget push src/SoftPosit/bin/Release/*.nupkg
+      run: dotnet nuget push src\SoftPosit\bin\Release\*.nupkg --api-key ${{secrets.GITHUB_TOKEN}}
