--- a/src/SoftPosit.Tests/SoftPosit.Tests.csproj
+++ b/src/SoftPosit.Tests/SoftPosit.Tests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SoftPosit\SoftPosit.csproj" />
+    <ProjectReference Include="..\SoftPosit.Net\SoftPosit.Net.csproj" />
   </ItemGroup>
 
 </Project>
